# gestorhs-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_hash.py  init_db.py  pyproject.toml  requirements.txt  test_cors.py
alembic/: env.py
app/: config.py  database.py  main.py
app/middleware/: cors.py  error_handler.py
app/models/: __init__.py  anexos.py  auxiliares.py  empresa.py  equipamento.py  logs.py  ordem_servico.py  usuario.py
app/routers/: auth.py  categorias.py  dashboard.py  empresas.py  equipamentos.py  marcas.py  ordens_servico.py  usuarios.py
app/schemas/: __init__.py  auth.py  auxiliares.py  common.py  dashboard.py  empresa.py  equipamento.py  ordem_servico.py  usuario.py
app/services/: auth_service.py  os_service.py
app/utils/: dependencies.py  pagination.py  security.py
migrations/: add_ativo_to_empresas_historico.sql  add_data_ultima_visita.sql  add_final_timestamp_columns.sql  fix_chave_acesso_size.sql  fix_data_solicitacao_null.sql  fix_empresas_historico_complete.sql  sync_empresas_historico_final.sql
